<resources>
    <string name="app_name">Tile Tap</string>
    <string name="shared_preferences_name">com.tayyar.pianotiles.high_scores</string>

    <string name="input">Game Speed:</string>
    <string name="start">START</string>
    <string name="speed_advice">Easy:\u00A020 Normal:\u00A030 Hard:\u00A040</string> <!-- \u00A0 is non breaking space in unicode -->
    <string name="game_speed">30</string>
    <string name="music">Music</string>
    <string name="vibration">Vibration</string>
    <string name="speed_increase">Speed Increase</string>
    <string name="high_scores">High Scores</string>
    <string name="speed">Speed</string>
    <string name="highest_score">Highest Score</string>
</resources>
